--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -5,34 +5,30 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Agenda de Postagens</h1>
-
-    <div id="agenda">
-        <!-- Aqui será exibida a agenda de postagens -->
-        <table>
-            <tr>
-                <th>Data/Hora</th>
-                <th>Link</th>
-                <!-- Adicione outras colunas aqui -->
-            </tr>
-            {% for data_hora, postagens in agenda.items() %}
-            <tr>
-                <td>{{ data_hora }}</td>
-                <td>
-                    <ul>
-                        {% for postagem in postagens %}
-                        <li>{{ postagem.link }}</li>
-                        <!-- Adicione outras informações aqui -->
-                        {% endfor %}
-                    </ul>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
+    <div class="container">
+        <h1>Agenda de Postagens</h1>
+        <div class="box">
+            <table>
+                <tr>
+                    <th>Data/Hora</th>
+                    <th>Link</th>
+                </tr>
+                {% for data_hora, postagens in agenda.items() %}
+                <tr>
+                    <td>{{ data_hora }}</td>
+                    <td>
+                        <ul>
+                            {% for postagem in postagens %}
+                            <li>{{ postagem.link }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <a href="{{ url_for('index') }}" class="btn">Voltar para o Início</a>
     </div>
-
-    <a href="{{ url_for('index') }}">Voltar para o Início</a>
-
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
