--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Workflow Manager</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Workflow Manager</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -17,29 +19,40 @@
                 </div>
                 <div class="input-group">
                     <label for="legenda">Legenda:</label>
-                    <textarea id="legenda" name="legenda" rows="4" cols="50" required></textarea>
+                    <textarea id="legenda" name="legenda" rows="4" required></textarea>
                 </div>
-
                 <div class="input-group">
                     <label for="comentarios">Comentários:</label>
-                    <textarea id="comentarios" name="comentarios" rows="4" cols="50"></textarea>
+                    <textarea id="comentarios" name="comentarios" rows="4"></textarea>
                 </div>
-                <div class="input-group">
-                    <label for="plataforma">Plataforma:</label>
-                    <select id="plataforma" name="plataforma" required>
-                        <option value="Facebook">Facebook</option>
-                        <option value="Instagram">Instagram</option>
-                        <option value="Youtube">Youtube</option>
-                        <option value="Tiktok">Tiktok</option>
-                    </select>
+
+                <div class="input-group" id="platforms">
+                    <label>Plataformas:</label>
+                    <div class="platform-option">
+                        <input type="checkbox" id="facebook" name="plataforma" value="Facebook">
+                        <label for="facebook"><i class="fab fa-facebook"></i> Facebook</label>
+                    </div>
+                    <div class="platform-option">
+                        <input type="checkbox" id="instagram" name="plataforma" value="Instagram">
+                        <label for="instagram"><i class="fab fa-instagram"></i> Instagram</label>
+                    </div>
+                    <div class="platform-option">
+                        <input type="checkbox" id="youtube" name="plataforma" value="Youtube">
+                        <label for="youtube"><i class="fab fa-youtube"></i> Youtube</label>
+                    </div>
+                    <div class="platform-option">
+                        <input type="checkbox" id="tiktok" name="plataforma" value="Tiktok">
+                        <label for="tiktok"><i class="fab fa-tiktok"></i> Tiktok</label>
+                    </div>
                 </div>
+
                 <div class="input-group">
                     <label for="date">Data:</label>
                     <input type="date" id="date" name="date" min="{{ today }}" max="{{ one_week_from_today }}" required>
                 </div>
                 <div class="input-group">
-                    <label for="time">Time:</label>
-                    <select id="time" name="time">
+                    <label for="time">Hora:</label>
+                    <select id="time" name="time" required>
                         {% for h in range(24) %}
                             {% for m in [0, 15, 30, 45] %}
                                 <option value="{{ '%02d' % h }}:{{ '%02d' % m }}">{{ '%02d' % h }}:{{ '%02d' % m }}</option>
