--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,11 +7,13 @@
     <title>Workflow Manager</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Workflow Manager</h1>
         <div class="box">
+            <div id="error-message" style="display:none;"></div>
             <form id="postForm" method="POST">
                 <div class="input-group">
                     <label for="link">Link da mídia:</label>
@@ -63,8 +65,48 @@
                 <input type="submit" value="Agendar Postagem">
             </form>
         </div>
+        <div class="box">
+            <h2>Posts Agendados</h2>
+            <ul id="scheduledPosts" class="scheduled-posts">
+                {% for post in posts %}
+                    <li data-id="{{ post.id }}">
+                        <p>{{ post.legenda }} <br> {{ post.date }} {{ post.time.strftime('%H:%M') }}</p>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
         <a href="{{ url_for('agenda_page') }}" class="btn">Ver Agenda</a>
     </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var el = document.getElementById('scheduledPosts');
+            var sortable = Sortable.create(el, {
+                onEnd: function (evt) {
+                    var itemEl = evt.item;  // dragged HTMLElement
+                    var order = sortable.toArray();
+                    updateOrder(order);
+                },
+            });
+
+            function updateOrder(newOrder) {
+                fetch('/update_order', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-Requested-With': 'XMLHttpRequest'
+                    },
+                    body: JSON.stringify({ new_order: newOrder }),
+                })
+                .then(response => response.text())
+                .then(data => {
+                    console.log('Order updated:', data);
+                })
+                .catch((error) => {
+                    console.error('Error updating order:', error);
+                });
+            }
+        });
+    </script>
 </body>
 </html>
